# prefsty

./: Cargo.toml
.sqlx/: query-08e0f399bb21d93a1a9973247949ddcadbce369be6d97225fcc3a1bf840d4096.json  query-2aea9335e08bdde066cf61c548f8d9bb274b95cfd2096c2bda19a00bd1a5689d.json  query-32089c4c8eebb273d95dbf4294801f742497869116446563e50135453a746d10.json  query-465f04fa222935982332a4b2e684a8acfe259591f338c26b222fdb79916cb211.json  query-4680a45c5f8ddd887c6c24ae8b909d53dcedbd899d1d4c491a05bd67d07d9c44.json  query-585350adfeb2b8b618ba1e5892b2b4853c42760f867758801b5eaeec7c849f7e.json  query-6d11fa17a3c2b73e0cddc99c06ae00a6af67bd6211f62c2cb7a4bf528c61139f.json  query-6ffdd0fb3784e2055cd20a71293cf2fab13474b0df5bfa3ed06321d5efd2df16.json  query-b26291d7a0813597f5bc77681fbecb43fe7ea4c72e7d6b63fc7ef01c38b17a7b.json  query-bd05a9e7f1470020473f7530a256d5527dfc1db8ade0682b6e6f3c18aa4300d8.json  query-c64c345df3d3de0ce4872b80121c349d416c3488e3b9a21d0b854e728cfbacca.json  query-cf94f30c24d1087903cd49dd2039c2df4266d1229ccdd92dbe73d53fd0e5b492.json  query-d6a006086dfaaffb35031b1c8fd53c7dcbf36c682b574fb22b1a42ce0c439b88.json  query-dfddfaa18bfb80366006ca47f79bc859bd38247dcc286fe27d8a8fb95214e21f.json
migrations/: 20250603095251_init_schema.sql  20250616085559_create_users.sql  20250616092509_create_joined.sql
src/: core.rs  http.rs  lib.rs  main.rs  persistence.rs
src/core/: actions.rs  bidding.rs  card.rs  choosing.rs  game.rs  player.rs  playing.rs  states.rs  types.rs
src/http/: controllers.rs  error.rs  extractors.rs  repos.rs  routes.rs  (+1 more)
tests/: bidding.rs  game.rs  no_bid.rs
(+15 files in other folders)
