[package]
name = "prefsty"
version = "0.1.0"
edition = "2024"

[dependencies]
env = "1.0.1"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
