[package]
name = "prefsty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "ws"] }
dashmap = "6.1.0"
env = "1.0.1"
futures-util = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid" ] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
